# margot

./: .coveragerc  .gitattributes  .gitignore  .lgtm.yml  .readthedocs.yml  .travis.yml  LICENSE  License.txt  MANIFEST  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py  todo.md
docs/: about.rst  conf.py  getting_started.md  index.md  index.rst  margot.backtest.rst  margot.config.rst  margot.config.settings.rst  margot.data.column.alphavantage.rst  margot.data.column.av.rst  margot.data.column.cboe.rst  margot.data.column.columns.rst  margot.data.column.rst  margot.data.feature.features.rst  margot.data.feature.rst  margot.data.features.finance.rst  margot.data.features.rst  margot.data.fields.rst  margot.data.frames.rst  margot.data.ratio.rst  margot.data.rst  margot.data.store.rst  margot.data.symbols.rst  margot.finance.rst  margot.rst  margot.signals.algos.rst  margot.signals.periods.rst  margot.signals.rst  margot.tests.rst  margot.tests.test_algo.rst  margot.tests.test_data.rst  modules.rst  notebook.margot.data.ipynb  notebook.margot.ipynb  notebooks.md  requirements.txt
etc/: margot
margot/: __init__.py  __main__.py  _version.py
margot/backtest/: __init__.py  backtest.py
margot/config/: __init__.py  settings.py
margot/data/: __init__.py  alphavantage.py  cboe.py  columns.py  ensembles.py  frames.py  ratio.py  symbols.py
margot/portfolio/: __init__.py  portfolio.py
margot/signals/: __init__.py  algos.py  backtest.py  order_types.py  periods.py
margot/tests/: test_algo.py  test_backtest.py  (+2 more)
notebooks/: margot.ipynb
(+24 files in other folders)
