# Inside of setup.cfg
[metadata]
description-file = README.md
license_file = License.txt
license_files = License.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = margot/_version.py
versionfile_build = margot/_version.py
tag_prefix = ""
parentdir_prefix = margot-

[bdist_wheel]
universal = 1